@@ -329,6 +329,9 @@ pretty_print_packet(netdissect_options *ndo, const struct pcap_pkthdr *h,
 	if (ndo->ndo_packet_number)
 		ND_PRINT("%5u  ", packets_captured);
 
+	if (ndo->ndo_lengths)
+		ND_PRINT("caplen %u len %u ", h->caplen, h->len);
+
 	/* Sanity checks on packet length / capture length */
 	if (h->caplen == 0) {
 		invalid_header = 1;
